samples/_failures_safe/1761393064_bc5204_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c901d9cf.c: In function ‘main’:
./samples/SAFE/__tmp_c901d9cf.c:178:32: error: expected ‘)’ at end of input
  178 |         printf("\t%s\n", tokens
      |               ~                ^
      |                                )
./samples/SAFE/__tmp_c901d9cf.c:178:9: error: expected declaration or statement at end of input
  178 |         printf("\t%s\n", tokens
      |         ^~~~~~
./samples/SAFE/__tmp_c901d9cf.c:178:9: error: expected declaration or statement at end of input
